Fixed alignment issues with page bar and tables

--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,7 @@
 }
 
 .requesttable {
-  margin-left: 1.5%;
+  margin-left: 2.7%;
   max-width: 95%;
   min-width: 95%;
   border-left: solid;
@@ -140,7 +140,7 @@
 }
 
 .log-table-mini {
-  margin-left: 2%;
+  margin-left: 2.9%;
   max-width: 80%!important;
   border-left: solid;
   border-width: 4px;
@@ -165,16 +165,17 @@
 }
 
 .item-detail-view-logs {
-  margin-left: -3%;
+  margin-left: -3.4%;
   max-width:80%;
 }
 
 .item-detail-view-requests {
-  margin-left: -5%;
+  margin-left: -6.5%;
+  min-width: 115%;
 }
 
 .item-detail-view-loans {
-  margin-left: -2%;
+  margin-left: -5.3%;
 }
 
 .add-to-cart-title {
@@ -645,7 +646,7 @@
 }
 
 .loan-table {
-  margin-left: 1.3%;
+  margin-left: 2.5%;
   max-width: 95%;
   border:none;
   border-left:solid;
@@ -656,7 +657,7 @@
 }
 
 .loan-table-mini {
-  margin-left: 2%;
+  margin-left: 4.5%;
   min-width: 98%;
 }
 
